<resources>
    <string name="app_name">H2O Aqua</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="house_no_flat_no">House No./Flat No.</string>
    <string name="street">Street</string>
    <string name="landmark">Landmark</string>
    <string name="locality">Locality</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="save_address">save address</string>
    <string name="optional">(optional)</string>
    <string name="floor_no">Floor No.</string>
    <string name="address">Address</string>
    <string name="select_address">Select Address</string>
    <string name="confirmation">Confirmation</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="number_of_water_cans">Number of Water Cans :</string>
    <string name="return_of_water_cans">Return of Water Cans :</string>
    <string name="your_billing_amount">Your Billing Amount :</string>
    <string name="rupee_symbol">₹</string>
    <string name="schedule_order">Schedule Order</string>
    <string name="add_location">Add Location…</string>
    <string name="confirm_order">confirm order</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_h2o_aqua_at">Contact H2O AQUA at:</string>
    <string name="contact_h2oaqua_in">contact@h2oaqua.in</string>
    <string name="for_complaints_suggestions_feedback">For complaints/suggestions/feedback:</string>
    <string name="customercare_h2oaqua_in">customercare@h2oaqua.in</string>
    <string name="call_us_at">Call us at:</string>
    <string name="order_history">Order History</string>
    <string name="address_stored">Address Stored</string>
    <string name="_100_per_can_to_be_paid_if_the_customer_does_nt_have_an_empty_can">₹100/per can to be paid if the customer does\'nt have an empty can</string>
    <string name="next">NEXT</string>
    <string name="_02_or_more_water_cans_25_per_can">02 or more Water Cans- ₹25 per can</string>
    <string name="_01_water_can_30">01 Water Can- ₹30</string>
    <string name="view_rate_card">View Rate Card</string>
    <string name="place_order">Place Order</string>
    <string name="quantity_of_water_cans">Quantity of Water Cans</string>
    <string name="isi_packaged_drinking_water_20_liters_bottle">ISI Packaged Drinking Water 20 Liters Bottle.</string>
    <string name="return_empty_water_cans">Return Empty Water Cans</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="share">Share</string>
    <string name="user_profile">User Profile</string>
    <string name="address1">address1</string>
    <string name="red_asterik"><sup>*</sup></string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="quench_your_thirst">Quench Your Thirst</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="delivering_purity_and_quality">Delivering Purity and Quality</string>
    <string name="hey_add_your_phone_number_for_us_to_contact_you_while_delivering">Hey, add your phone number, for us to contact you while delivering!</string>
    <string name="add">add</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number_below">Enter your phone number below</string>
    <string name="otp">OTP</string>
    <string name="submit">Submit</string>
    <string name="enter_the_otp_sent_to_your_phone">Enter the otp sent to your phone.</string>
    <string name="_7348976167">7348976167</string>
    <string name="_8709593667">8709593667</string>
    <string name="_9739743004">9739743004</string>
    <string name="check_your_internet_connection">Check Your Internet Connection…</string>
    <string name="refresh">Refresh</string>
    <string name="number_of_cans">Number of cans</string>
    <string name="ordered">ordered :</string>
    <string name="number_of_empty_cans">Number of Empty Cans :</string>
    <string name="_1">1</string>
    <string name="amount_">Amount :</string>
    <string name="date_">Date :</string>
    <string name="cancel">Cancel</string>
</resources>
