<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile_24dp"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_orderHistory"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/order_history"/>
        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/ic_menu_contact_24dp"
            android:title="@string/contact_us"/>
        <item
            android:id="@+id/signOut"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sign_out"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share"/>
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->

    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send"/>-->
    <!--</menu>-->
    <!--</item>-->

</menu>
