<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.h2oaqua.h2oaqua.contactUsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="-8dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        android:textSize="32sp"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="24dp"
        android:scaleType="fitCenter"
        android:src="@drawable/h2ofinal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/contact_h2o_aqua_at"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/contactUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:autoLink="email"
        android:text="@string/contact_h2oaqua_in"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/for_complaints_suggestions_feedback"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/feedbackUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:autoLink="email"
        android:text="@string/customercare_h2oaqua_in"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/call_us_at"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:autoLink="phone"
        android:text="@string/_7348976167"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:autoLink="phone"
        android:text="@string/_8709593667"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/number3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:autoLink="phone"
        android:text="@string/_9739743004"
        android:textSize="16sp"/>

</LinearLayout>
